--- a/Source Code/JobSearchingSystem/JobSearchingSystem/Views/Shared/_LayoutFinal.cshtml
+++ b/Source Code/JobSearchingSystem/JobSearchingSystem/Views/Shared/_LayoutFinal.cshtml
@@ -202,7 +202,7 @@
                 lengthChange: false,
                 "language": {
                     "lengthMenu": "Hiển thị _MENU_ yêu cầu mỗi trang",
-                    "zeroRecords": "Không tìm thấy dữ liệu phù hợp",
+                    "zeroRecords": "Không có dữ liệu",
                     "info": "Hiển thị trang _PAGE_ trên tổng số _PAGES_ trang",
                     "infoEmpty": "Không tìm thấy dữ liệu phù hợp",
                     "infoFiltered": "(tìm kiếm từ _MAX_ yêu cầu)",
@@ -692,7 +692,7 @@
                                     <li><a href="@Url.Action("Index", "Report")"><i class="fa fa-warning"></i>Quản lý báo cáo lỗi</a></li>
                                 }
                                 <li class="divider"></li>
-                                <li><a href="@Url.Action("List", "Message")"><i class="fa fa-envelope"></i>Hòm thư<!--<span class="badge badge-danger">3</span>--></a></li>
+                                <li><a href="@Url.Action("List", "Message")"><i class="fa fa-envelope"></i>Hộp tin nhắn<!--<span class="badge badge-danger">3</span>--></a></li>
                                 <li class="divider"></li>
                                 <li><a href="@Url.Action("Create", "Topic")"><i class="fa fa-pencil"></i>Tạo bài viết</a></li>
                                 <li><a href="@Url.Action("List", "Topic")"><i class="fa fa-list"></i>Xem các bài viết</a></li>
