--- a/Source Code/JobSearchingSystem/JobSearchingSystem/Views/Job/OwnList.cshtml
+++ b/Source Code/JobSearchingSystem/JobSearchingSystem/Views/Job/OwnList.cshtml
@@ -55,7 +55,7 @@
             $('input[name=jobID]').val(jobID);
             $('#searchJobseeker').modal('show');
         } else if(jobPackage == null){
-            swal("", "Vui lòng chọn công việc để tìm kiếm", "warning")
+            swal("", "Vui lòng chọn công việc để tìm kiếm ứng viên phù hợp", "warning")
         } else {
             swal("", "Chỉ có công việc thuộc loại Unlimited mới có thể sử dụng chức năng này!", "error")
         }
@@ -186,7 +186,7 @@
 </div>
 
 
-<div class="page-content" style="padding: 20px 100px 20px 100px; background-color: #dedede; ">
+<div class="page-content" style="padding: 20px 80px 20px 80px; background-color: #dedede; ">
     <div class="col-lg-9 panel panel-default">
         <h2 style="font-weight:600;text-align:center">Quản lý việc làm</h2>
         <br />
@@ -218,21 +218,21 @@
                 <tbody>
                     @foreach (var item in @Model)
                     {
-                        <tr data-toggle="tooltip" title="Quản lý ứng viên">
+                        <tr>
                             <td><input id="@item.JobID" type="radio" name="jobPackage" value="@item.JobPackage" /></td>
-                            <td onclick="document.location = '@Url.Action("List","Applicant",new { id = item.JobID })'">
+                            <td>
                                 @item.JobTitle
                             </td>
-                            <td onclick="document.location = '@Url.Action("List","Applicant",new { id = item.JobID })'">
+                            <td>
                                 @item.JobPackage
                             </td>
-                            <td onclick="document.location = '@Url.Action("List","Applicant",new { id = item.JobID })'">
+                            <td>
                                 @item.PostedDate.Value.ToString("dd/MM/yyyy")
                             </td>
-                            <td onclick="document.location = '@Url.Action("List","Applicant",new { id = item.JobID })'">
+                            <td>
                                 @item.EndedDate.Value.ToString("dd/MM/yyyy")
                             </td>
-                            <td onclick="document.location = '@Url.Action("List","Applicant",new { id = item.JobID })'">
+                            <td>
                                 @item.ApplicantCount
                             </td>
                             <td>
@@ -250,6 +250,10 @@
                                 }
                             </td>
                             <td>
+                                @if (item.ApplicantCount > 0)
+                                {
+                                    <a href="@Url.Action("List", "Applicant", new { id = item.JobID })" class="btn btn-grey btn-sm" data-toggle="tooltip" title="Quản lý ứng viên"><i class="fa fa-user"></i></a>
+                                }
                                 <a href="@Url.Action("Detail","Job",new { jobID = item.JobID })" class="btn btn-info btn-sm" data-toggle="tooltip" title="Xem thông tin"><i class="fa fa-info-circle"></i></a>
                                 @if (DateTime.Now.CompareTo(item.EndedDate) < 0)
                                 {
@@ -276,6 +280,8 @@
                                         }
                                     }
                                 }
+                                
+                                
                             </td>
                         </tr>
                     }
