--- a/Source Code/JobSearchingSystem/JobSearchingSystem/Views/Shared/_MessagePartial.cshtml
+++ b/Source Code/JobSearchingSystem/JobSearchingSystem/Views/Shared/_MessagePartial.cshtml
@@ -15,14 +15,14 @@
                 foreach (var item in Model.messageList)
                 {
 
-                    string content = HttpUtility.UrlDecode(item.Content);
+                    string content = HttpUtility.UrlDecode(item.Content, System.Text.Encoding.Default);
                     string noHTML = Regex.Replace(content, @"<[^>]+>|&nbsp;", "").Trim();
                     string noHTMLNormalised = Regex.Replace(noHTML, @"\s{2,}", " ");
-                    if (noHTMLNormalised.Length > 50)
+                    if (noHTMLNormalised.Length > 20)
                     {
-                        noHTMLNormalised = noHTMLNormalised.Substring(0, 49) + " ....";
+                        noHTMLNormalised = noHTMLNormalised.Substring(0, 20) + " ....";
                     }
-                    <a href="/Message/Detail?id=@item.MessageID" class="list-group-item"><input type="checkbox" id="@item.MessageID" name="mark" value="@item.MessageID"/><span class="fa fa-star-o mrm mlm"></span><span style="min-width: 120px; display: inline-block;" class="name">@item.SenderName</span>@*<span>Sed ut perspiciatis unde</span>*@&nbsp;  &nbsp;<span style="font-size: 11px;" class="text-muted">@noHTMLNormalised</span><span class="badge">@item.SendTime</span><span class="pull-right mrl"><span class="glyphicon glyphicon-paperclip"></span></span></a>
+                    <a href="/Message/Detail?id=@item.MessageID" class="list-group-item"><input type="checkbox" id="@item.MessageID" name="mark" value="@item.MessageID"/><span style="min-width: 120px; display: inline-block;" class="name">@item.SenderName</span>@*<span>Sed ut perspiciatis unde</span>*@&nbsp;  &nbsp;<span style="font-size: 11px;" class="text-muted">@noHTMLNormalised</span><span class="badge">@item.SendTime</span><span class="pull-right mrl"></span></a>
                 }
             }
             @*@using (Html.BeginForm("DeleteMessage", "Message", FormMethod.Post, new { id = "deleteForm" }))
